Switch to Java HTTP Client
This was added in Java 11 and supports HTTP/2.